--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,15 +63,21 @@ services:
       - HOSTNAME_EXTERNAL=sqs.us-east-1.amazonaws.com
     ports:
       - "9324:9324"
+    logging:
+      driver: none
 
   s3:
     image: minio/minio
     command: server /data
     ports:
       - "9000:9000"
+    logging:
+      driver: none
 
   dynamodb:
     image: amazon/dynamodb-local
+    logging:
+      driver: none
 
   grapl-sysmon-subgraph-generator:
     image: grapl/grapl-sysmon-subgraph-generator:${TAG:-latest}
