--- a/analyzer-dispatcher/Cargo.toml
+++ b/analyzer-dispatcher/Cargo.toml
@@ -18,10 +18,10 @@ grpc = "0.6.1"
 log = "0.4.6"
 prost = "0.4.0"
 
-rusoto_s3 = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
-rusoto_core = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
-rusoto_sqs = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
-rusoto_sns = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
+rusoto_s3 = { version="0.43.0", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
+rusoto_sqs = { version="0.43.0", default_features = false, features=["rustls"] }
+rusoto_sns = { version="0.43.0", default_features = false, features=["rustls"] }
 
 
 serde = "1.0.85"
