--- a/graph-merger/Cargo.toml
+++ b/graph-merger/Cargo.toml
@@ -17,10 +17,10 @@ dgraph-rs = "0.2.*"
 grpc = "0.6.1"
 sqs-lambda = "0.20.*"
 
-rusoto_s3 = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
-rusoto_core = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
-rusoto_sqs = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
-rusoto_sns = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
+rusoto_s3 = { version="0.43.0", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
+rusoto_sqs = { version="0.43.0", default_features = false, features=["rustls"] }
+rusoto_sns = { version="0.43.0", default_features = false, features=["rustls"] }
 
 lambda_runtime = "0.2.*"
 aws_lambda_events = "0.2.0"
