--- a/sysmon-subgraph-generator/Cargo.toml
+++ b/sysmon-subgraph-generator/Cargo.toml
@@ -23,9 +23,9 @@ chrono = "0.4.6"
 rayon = "1.0.3"
 stopwatch = "0.0.7"
 
-rusoto_s3 = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
-rusoto_core = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
-rusoto_sqs = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
+rusoto_s3 = {version="0.43.0", default_features = false, features=["rustls"]}
+rusoto_core = {version="0.43.0", default_features = false, features=["rustls"]}
+rusoto_sqs = {version="0.43.0", default_features = false, features=["rustls"]}
 futures = "0.3.*"
 aws_lambda_events = "0.2.0"
 
