--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,9 +83,10 @@ services:
     image: grapl/grapl-sysmon-subgraph-generator:${TAG:-latest}
     tty: false
     environment:
-      - BUCKET_PREFIX="local-grapl"
-      - IS_LOCAL="True"
+      - "BUCKET_PREFIX=local-grapl"
+      - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/sysmon-graph-generator-queue"
     links:
       - s3:minio
       - sqs:sqs.us-east-1.amazonaws.com
@@ -102,9 +103,10 @@ services:
     image: grapl/grapl-node-identifier:${TAG:-latest}
     command: ./node-identifier
     environment:
-      - BUCKET_PREFIX="local-grapl"
-      - IS_LOCAL="True"
+      - "BUCKET_PREFIX=local-grapl"
+      - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-queue"
     tty: false
     links:
       - s3:minio
@@ -125,9 +127,10 @@ services:
     image: grapl/grapl-node-identifier:${TAG:-latest}
     command: ./node-identifier-retry-handler
     environment:
-      - BUCKET_PREFIX="local-grapl"
-      - IS_LOCAL="True"
+      - "BUCKET_PREFIX=local-grapl"
+      - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-retry-queue"
     tty: false
     links:
       - s3:minio
@@ -146,9 +149,10 @@ services:
   grapl-graph-merger:
     image: grapl/grapl-graph-merger
     environment:
-      - BUCKET_PREFIX="local-grapl"
-      - IS_LOCAL="True"
+      - "BUCKET_PREFIX=local-grapl"
+      - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/graph-merger-queue"
     tty: false
     links:
       - s3:minio
@@ -167,9 +171,10 @@ services:
   grapl-analyzer-dispatcher:
     image: grapl/grapl-analyzer-dispatcher:${TAG:-latest}
     environment:
-      - BUCKET_PREFIX="local-grapl"
-      - IS_LOCAL="True"
+      - "BUCKET_PREFIX=local-grapl"
+      - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-dispatcher-queue"
     tty: false
     links:
       - s3:minio
@@ -187,10 +192,10 @@ services:
       context: ./analyzer_executor/
       dockerfile: ./Dockerfile
     environment:
-      - IS_LOCAL="True"
+      - "IS_LOCAL=True"
       - GRPC_ENABLE_FORK_SUPPORT=1
       - MG_ALPHAS=master_graph
-      - IS_RETRY="False"
+      - "IS_RETRY=False"
       - BUCKET_PREFIX=local-grapl
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     command: python3 /src/analyzer-executor.py
@@ -210,8 +215,8 @@ services:
       context: ./engagement-creator/
       dockerfile: ./Dockerfile
     environment:
-      - IS_LOCAL="True"
-      - BUCKET_PREFIX="local-grapl"
+      - "IS_LOCAL=True"
+      - "BUCKET_PREFIX=local-grapl"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     command: python3 /src/engagement-creator.py
     tty: true
@@ -232,7 +237,7 @@ services:
     ports:
       - "8900:8900"
     environment:
-      - IS_LOCAL="True"
+      - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     command: chalice local --no-autoreload --host=0.0.0.0 --port=8900
     tty: true
@@ -246,7 +251,7 @@ services:
     ports:
       - "8123:8123"
     environment:
-      - IS_LOCAL="True"
+      - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     command: chalice local --no-autoreload --host=0.0.0.0 --port=8123
     tty: true
