--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,7 +86,8 @@ services:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
-      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/sysmon-graph-generator-queue"
+      - "SYSMON_GRAPH_GENERATOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/sysmon-graph-generator-queue"
+      - "NODE_IDENTIFIER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-queue"
     links:
       - s3:minio
       - sqs:sqs.us-east-1.amazonaws.com
@@ -106,7 +107,8 @@ services:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
-      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-queue"
+      - "NODE_IDENTIFIER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-queue"
+      - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/graph-merger-queue"
     tty: false
     links:
       - s3:minio
@@ -130,7 +132,8 @@ services:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
-      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-retry-queue"
+      - "NODE_IDENTIFIER_RETRY_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-retry-queue"
+      - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/graph-merger-queue"
     tty: false
     links:
       - s3:minio
@@ -152,7 +155,8 @@ services:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
-      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/graph-merger-queue"
+      - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/graph-merger-queue"
+      - "ANALYZER_DISPATCHER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-dispatcher-queue"
     tty: false
     links:
       - s3:minio
@@ -174,7 +178,8 @@ services:
       - "BUCKET_PREFIX=local-grapl"
       - "IS_LOCAL=True"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
-      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-dispatcher-queue"
+      - "ANALYZER_DISPATCHER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-dispatcher-queue"
+      - "ANALYZER_EXECUTOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-executor-queue"
     tty: false
     links:
       - s3:minio
@@ -196,8 +201,9 @@ services:
       - GRPC_ENABLE_FORK_SUPPORT=1
       - MG_ALPHAS=master_graph
       - "IS_RETRY=False"
-      - BUCKET_PREFIX=local-grapl
+      - "BUCKET_PREFIX=local-grapl"
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "ANALYZER_EXECUTOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-executor-queue"
     command: python3 /src/analyzer-executor.py
     links:
       - s3:minio
