--- a/analyzer-dispatcher/Cargo.toml
+++ b/analyzer-dispatcher/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
+graph-descriptions = {package="grapl-graph-descriptions", version="*"}
+grapl-config = {path="../grapl-config"}
 
 aws_lambda_events = "0.2.1"
 base64 = "0.10.1"
@@ -17,18 +18,17 @@ grpc = "0.6.1"
 log = "0.4.6"
 prost = "0.4.0"
 
-
-rusoto_s3 = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
-rusoto_core = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
-rusoto_sqs = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
-rusoto_sns = { version="0.43.0-beta.1", default_features = false, features=["rustls"] }
+rusoto_s3 = { version="0.43.0", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
+rusoto_sqs = { version="0.43.0", default_features = false, features=["rustls"] }
+rusoto_sns = { version="0.43.0", default_features = false, features=["rustls"] }
 
 
 serde = "1.0.85"
 serde_derive = "1.0.85"
 serde_json = "1.0.37"
 sha2 = "0.8.0"
-simple_logger = "1.0.1"
+simple_logger = "1.6.*"
 stopwatch = "0.0.7"
 
 
@@ -41,7 +41,6 @@ tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "r
 chrono = "0.4.11"
 rusoto_credential = "0.43.0"
 sqs-lambda = "0.20.*"
-#sqs-lambda = {path="../../../workspace/sqs-lambda/" , version="*"}
 
 
 [dependencies.uuid]
