--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - "8000:8000"
       - "8080:8080"
       - "9080:9080"
+    logging:
+      driver: none
 
   engagement_graph:
     tty: false
@@ -16,11 +18,15 @@ services:
       - "8001:8000"
       - "8081:8080"
       - "9081:9080"
+    logging:
+      driver: none
 
   graph_provision:
     build:
       context: ./engagement_ux/engagement_edge/
       dockerfile: ./Dockerfile
+    environment:
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     volumes:
       - ./local_grapl/:/var/run/target/
     command: python /var/run/target/grapl_provision.py
@@ -39,6 +45,8 @@ services:
     build:
       context: ./engagement_ux/engagement_edge/
       dockerfile: ./Dockerfile
+    environment:
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     volumes:
       - ./local_grapl/local_dynamodb:/var/run/target/
     command: python /var/run/target/provision_local_identity_table.py
@@ -55,22 +63,31 @@ services:
       - HOSTNAME_EXTERNAL=sqs.us-east-1.amazonaws.com
     ports:
       - "9324:9324"
+    logging:
+      driver: none
 
   s3:
     image: minio/minio
     command: server /data
     ports:
       - "9000:9000"
+    logging:
+      driver: none
 
   dynamodb:
     image: amazon/dynamodb-local
+    logging:
+      driver: none
 
   grapl-sysmon-subgraph-generator:
     image: grapl/grapl-sysmon-subgraph-generator:${TAG:-latest}
     tty: false
     environment:
-      - BUCKET_PREFIX="local-grapl"
-      - IS_LOCAL="True"
+      - "BUCKET_PREFIX=local-grapl"
+      - "IS_LOCAL=True"
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "SYSMON_GRAPH_GENERATOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/sysmon-graph-generator-queue"
+      - "NODE_IDENTIFIER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-queue"
     links:
       - s3:minio
       - sqs:sqs.us-east-1.amazonaws.com
@@ -87,8 +104,11 @@ services:
     image: grapl/grapl-node-identifier:${TAG:-latest}
     command: ./node-identifier
     environment:
-      - BUCKET_PREFIX="local-grapl"
-      - IS_LOCAL="True"
+      - "BUCKET_PREFIX=local-grapl"
+      - "IS_LOCAL=True"
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "NODE_IDENTIFIER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-queue"
+      - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/graph-merger-queue"
     tty: false
     links:
       - s3:minio
@@ -109,8 +129,11 @@ services:
     image: grapl/grapl-node-identifier:${TAG:-latest}
     command: ./node-identifier-retry-handler
     environment:
-      - BUCKET_PREFIX="local-grapl"
-      - IS_LOCAL="True"
+      - "BUCKET_PREFIX=local-grapl"
+      - "IS_LOCAL=True"
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "NODE_IDENTIFIER_RETRY_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/node-identifier-retry-queue"
+      - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/graph-merger-queue"
     tty: false
     links:
       - s3:minio
@@ -129,8 +152,11 @@ services:
   grapl-graph-merger:
     image: grapl/grapl-graph-merger
     environment:
-      - BUCKET_PREFIX="local-grapl"
-      - IS_LOCAL="True"
+      - "BUCKET_PREFIX=local-grapl"
+      - "IS_LOCAL=True"
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/graph-merger-queue"
+      - "ANALYZER_DISPATCHER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-dispatcher-queue"
     tty: false
     links:
       - s3:minio
@@ -149,8 +175,11 @@ services:
   grapl-analyzer-dispatcher:
     image: grapl/grapl-analyzer-dispatcher:${TAG:-latest}
     environment:
-      - BUCKET_PREFIX="local-grapl"
-      - IS_LOCAL="True"
+      - "BUCKET_PREFIX=local-grapl"
+      - "IS_LOCAL=True"
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "ANALYZER_DISPATCHER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-dispatcher-queue"
+      - "ANALYZER_EXECUTOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-executor-queue"
     tty: false
     links:
       - s3:minio
@@ -168,11 +197,13 @@ services:
       context: ./analyzer_executor/
       dockerfile: ./Dockerfile
     environment:
-      - IS_LOCAL="True"
+      - "IS_LOCAL=True"
       - GRPC_ENABLE_FORK_SUPPORT=1
       - MG_ALPHAS=master_graph
-      - IS_RETRY="False"
-      - BUCKET_PREFIX=local-grapl
+      - "IS_RETRY=False"
+      - "BUCKET_PREFIX=local-grapl"
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
+      - "ANALYZER_EXECUTOR_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/analyzer-executor-queue"
     command: python3 /src/analyzer-executor.py
     links:
       - s3:minio
@@ -190,8 +221,9 @@ services:
       context: ./engagement-creator/
       dockerfile: ./Dockerfile
     environment:
-      - IS_LOCAL="True"
-      - BUCKET_PREFIX=local-grapl
+      - "IS_LOCAL=True"
+      - "BUCKET_PREFIX=local-grapl"
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     command: python3 /src/engagement-creator.py
     tty: true
     links:
@@ -211,7 +243,8 @@ services:
     ports:
       - "8900:8900"
     environment:
-      - IS_LOCAL="True"
+      - "IS_LOCAL=True"
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     command: chalice local --no-autoreload --host=0.0.0.0 --port=8900
     tty: true
     links:
@@ -224,7 +257,8 @@ services:
     ports:
       - "8123:8123"
     environment:
-      - IS_LOCAL="True"
+      - "IS_LOCAL=True"
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     command: chalice local --no-autoreload --host=0.0.0.0 --port=8123
     tty: true
     links:
