--- a/grapl-config/Cargo.toml
+++ b/grapl-config/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.*"
 sqs-lambda = "0.20.1"
-rusoto_core = {version="0.42.0", default_features = false, features=["rustls"]}
+rusoto_core = {version="0.43.0", default_features = false, features=["rustls"]}
