--- a/node-identifier/Cargo.toml
+++ b/node-identifier/Cargo.toml
@@ -17,23 +17,21 @@ path = "src/bin/node-identifier-retry-handler.rs"
 [dependencies]
 bytes = "0.4"
 failure = "*"
-graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
-#graph-descriptions = {path="../graph-descriptions", package="grapl-graph-descriptions" , version="*"}
+graph-descriptions = {package="grapl-graph-descriptions", version="*"}
+grapl-config = {path = "../grapl-config"}
 prost = "0.4.0"
 prost-derive = "0.4"
 prost-types = "*"
-#tokio-core = "0.1"
 
 base64 = "0.9.2"
 
-rusoto_s3 = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
-rusoto_core = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
-rusoto_sqs = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
-rusoto_dynamodb = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
-serde_dynamodb = {version="0.5.0-beta.1", default_features = false, features=["rustls"]}
+rusoto_s3 = {version="0.43.0", default_features = false, features=["rustls"]}
+rusoto_core = {version="0.43.0", default_features = false, features=["rustls"]}
+rusoto_sqs = {version="0.43.0", default_features = false, features=["rustls"]}
+rusoto_dynamodb = {version="0.43.0", default_features = false, features=["rustls"]}
+serde_dynamodb = {version="0.5.0", default_features = false, features=["rustls"]}
 
 lambda_runtime = "0.2.*"
-
 
 sha256 = "0.1.0"
 sha2 = "0.7.1"
@@ -44,11 +42,10 @@ stopwatch = "0.0.7"
 zstd = "0.5.*"
 futures = "0.3.*"
 sqs-lambda = "0.20.*"
-#sqs-lambda = {path="../../../workspace/sqs-lambda/" , version="*"}
 
 aws_lambda_events = "0.2.0"
 
-simple_logger = "1.0.1"
+simple_logger = "1.6.*"
 serde_json = "1.0.39"
 serde_derive = "1.0.89"
 serde = "1.0.89"
