--- a/sysmon-subgraph-generator/Cargo.toml
+++ b/sysmon-subgraph-generator/Cargo.toml
@@ -5,14 +5,10 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-#graph-generator-lib = { path = "./graph-generator-lib/" }
-#graph-generator-lib = { path = "../graph-generator-lib/" }
-graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
-#graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions" , version="*"}
+graph-descriptions = {package="grapl-graph-descriptions", version="*"}
+grapl-config = {path = "../grapl-config", version="*"}
 
 sqs-lambda = "0.20.*"
-#sqs-lambda = {path="../../../workspace/sqs-lambda/" , version="*"}
-#sqs-lambda = {path = "./sqs-lambda/"}
 serde_json = "*"
 serde = "1.0.71"
 serde_derive = "1.0.71"
@@ -27,14 +23,13 @@ chrono = "0.4.6"
 rayon = "1.0.3"
 stopwatch = "0.0.7"
 
-rusoto_s3 = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
-rusoto_core = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
-rusoto_sqs = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
+rusoto_s3 = {version="0.43.0", default_features = false, features=["rustls"]}
+rusoto_core = {version="0.43.0", default_features = false, features=["rustls"]}
+rusoto_sqs = {version="0.43.0", default_features = false, features=["rustls"]}
 futures = "0.3.*"
 aws_lambda_events = "0.2.0"
-#rusoto_mock = "0.30.0"
 
-simple_logger = "1.0.1"
+simple_logger = "1.6.*"
 lambda_runtime = "0.2.*"
 async-trait = "0.1.22"
 zstd = "0.5.1"
