--- a/src/rust/graph-descriptions/Cargo.toml
+++ b/src/rust/graph-descriptions/Cargo.toml
@@ -9,24 +9,18 @@ license = "MIT"
 
 [dependencies]
 
-futures = "0.1"
-thiserror = "1.0.9"
-bytes = "0.4"
-prost = "0.4"
-prost-derive = "0.4"
+thiserror = "1.0.16"
 
-typed-builder= "0.1.1"
+prost = "0.6.*"
+prost-derive = "0.6.*"
 
-derive_more = "0.10.*"
-custom_derive = "0.1.7"
+serde = "1.0.110"
+serde_json = "1.0.53"
+serde_derive = "1.0.110"
 
-serde = "1.0.66"
-serde_json = "1.0.20"
-serde_derive = "1.0.66"
-derive_builder = "0.7.0"
-log = "0.4.6"
-base64 = "0.11.0"
+derive_builder = "0.9.0"
 
+log = "0.4.*"
 
 [dependencies.uuid]
 version = "0.8.1"
@@ -35,4 +29,4 @@ features = ["v4"]
 
 
 [build-dependencies]
-prost-build = "0.4.0"
+prost-build = "0.6.*"
