some dep cleanup

--- a/src/rust/derive-dynamic-node/Cargo.toml
+++ b/src/rust/derive-dynamic-node/Cargo.toml
@@ -20,10 +20,10 @@ syn = "0.15.39"
 quote = "0.6.13"
 proc-macro2 = "0.4.30"
 
-serde_derive = "1.0.97"
-serde = "1.0.97"
-serde_json = "1.0.40"
-log = "0.4.7"
+serde = "1.0.110"
+serde_json = "1.0.53"
+serde_derive = "1.0.110"
+log = "0.4.*"
 
 [dependencies.uuid]
 version = "0.7.4"
