--- a/src/rust/analyzer-dispatcher/Cargo.toml
+++ b/src/rust/analyzer-dispatcher/Cargo.toml
@@ -16,32 +16,28 @@ failure = "0.1.5"
 futures = "0.3.*"
 grpc = "0.6.1"
 log = "0.4.6"
-prost = "0.4.0"
+prost = "0.6.*"
 
 rusoto_s3 = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_sns = { version="0.43.0", default_features = false, features=["rustls"] }
 
-
-serde = "1.0.85"
-serde_derive = "1.0.85"
-serde_json = "1.0.37"
+serde = "1.0.110"
+serde_json = "1.0.53"
+serde_derive = "1.0.110"
 sha2 = "0.8.0"
 simple_logger = "1.6.*"
 stopwatch = "0.0.7"
-
 
 lambda_runtime = "0.2.*"
 async-trait = "0.1.22"
 zstd = "0.5.1"
 tokio-compat = "0.1.2"
-#tokio = "0.2.6"
 tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
 chrono = "0.4.11"
 rusoto_credential = "0.43.0"
 sqs-lambda = "0.20.*"
-
 
 [dependencies.uuid]
 version = "*"
