--- a/src/rust/graph-descriptions/Cargo.toml
+++ b/src/rust/graph-descriptions/Cargo.toml
@@ -13,6 +13,7 @@ thiserror = "1.0.16"
 
 prost = "0.6.*"
 prost-derive = "0.6.*"
+prost-types = "0.6.*"
 
 serde = "1.0.110"
 serde_json = "1.0.53"
@@ -25,8 +26,6 @@ log = "0.4.*"
 [dependencies.uuid]
 version = "0.8.1"
 features = ["v4"]
-
-
 
 [build-dependencies]
 prost-build = "0.6.*"
