--- a/src/rust/graph-generator-lib/Cargo.toml
+++ b/src/rust/graph-generator-lib/Cargo.toml
@@ -14,10 +14,10 @@ rusoto_s3 = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.43.0", default_features = false, features=["rustls"] }
 
-futures = "0.1.23"
+#futures = "0.1.23"
 base64 = "0.9.2"
-prost = "0.4.0"
-serde_json = "1.0.24"
+prost = "0.6.*"
+serde_json = "1.0.53"
 log = "0.4.3"
 base16 = "0.1.1"
 zstd = "0.5.1"
