--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -9,9 +9,9 @@ graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descrip
 grapl-config = {path="../grapl-config", version="*"}
 
 failure = "0.1.3"
-serde = "1.0.80"
-serde_json = "1.0.33"
-serde_derive = "1.0.80"
+serde = "1.0.110"
+serde_json = "1.0.53"
+serde_derive = "1.0.110"
 log = "0.4.6"
 
 dgraph-rs = "0.2.*"
@@ -32,7 +32,7 @@ sha2 = "0.8.0"
 
 zstd = "0.5.1"
 base16 = "0.1.1"
-prost = "0.4.0"
+prost = "0.6.*"
 base64 = "0.10.1"
 rand = "0.6.5"
 itertools = "0.8.0"
