--- a/src/rust/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/sysmon-subgraph-generator/Cargo.toml
@@ -9,11 +9,11 @@ graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descrip
 grapl-config = {path = "../grapl-config", version="*"}
 
 sqs-lambda = "0.20.*"
-serde_json = "*"
-serde = "1.0.71"
-serde_derive = "1.0.71"
+serde = "1.0.110"
+serde_json = "1.0.53"
+serde_derive = "1.0.110"
 failure = "0.1.2"
-prost = "0.4.0"
+prost = "0.6.*"
 log = "0.4.3"
 base16 = "0.1.1"
 regex = "1.1.0"
