clean up rust import

--- a/src/rust/analyzer-dispatcher/Cargo.toml
+++ b/src/rust/analyzer-dispatcher/Cargo.toml
@@ -11,8 +11,9 @@ grapl-config = {path="../grapl-config", version="*"}
 aws_lambda_events = "0.2.1"
 base64 = "0.10.1"
 base16 = "0.1.1"
+bytes = "0.5.*"
 dgraph-rs = "0.1.2"
-failure = "0.1.5"
+failure = "0.1.*"
 futures = "0.3.*"
 grpc = "0.6.1"
 log = "0.4.6"
