--- a/src/rust/generic-subgraph-generator/Cargo.toml
+++ b/src/rust/generic-subgraph-generator/Cargo.toml
@@ -14,7 +14,7 @@ sqs-lambda = "0.20.*"
 serde = "1.0.110"
 serde_json = "1.0.53"
 serde_derive = "1.0.110"
-failure = "0.1.2"
+failure = "0.1.*"
 prost = "0.6.*"
 log = "0.4.3"
 base16 = "0.1.1"
