--- a/src/rust/graph-generator-lib/Cargo.toml
+++ b/src/rust/graph-generator-lib/Cargo.toml
@@ -7,14 +7,13 @@ edition = "2018"
 [dependencies]
 graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions", version="*"}
 
-failure = "0.1.2"
+failure = "0.1.*"
 
 sha2 = "0.7.1"
 rusoto_s3 = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.43.0", default_features = false, features=["rustls"] }
 
-#futures = "0.1.23"
 base64 = "0.9.2"
 prost = "0.6.*"
 serde_json = "1.0.53"
