--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2018"
 graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions", version="*"}
 grapl-config = {path="../grapl-config", version="*"}
 
-failure = "0.1.3"
+failure = "0.1.*"
 serde = "1.0.110"
 serde_json = "1.0.53"
 serde_derive = "1.0.110"
-log = "0.4.6"
+log = "0.4.*"
 
 dgraph-rs = "0.2.*"
 grpc = "0.6.1"
@@ -37,8 +37,8 @@ base64 = "0.10.1"
 rand = "0.6.5"
 itertools = "0.8.0"
 
-futures = "0.3.1"
-async-trait = "0.1.22"
+futures = "0.3.*"
+async-trait = "0.1.30"
 uuid = "0.8.1"
 tokio-compat = "0.1.2"
 tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
