--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -25,7 +25,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [py36]
+        python-version: [3.6]
 
     steps:
       - uses: actions/checkout@v2
@@ -45,4 +45,4 @@ jobs:
       - name: Check python formatting
         run: |
           source .venv/bin/activate
-          black --check --target-version ${{ matrix.python-version }} --exclude '.*_pb2.py.*' src/python
+          black --check --exclude '.*_pb2.py.*' src/python
