--- a/mypy.ini
+++ b/mypy.ini
@@ -5,3 +5,7 @@ warn_unused_configs = True
 # for things without type stubs, like setuptools
 ignore_missing_imports = True
 mypy_path = "./venv/lib/python3.7/site-packages/:./venv/lib/python3.7/site-packages/pydgraph/"
+
+# Ignore the mut_ dir
+[mypy-mut_grapl_analyzerlib.*]
+ignore_errors = True
