updates for review comments

--- a/.github/workflows/grapl-deploy.yml
+++ b/.github/workflows/grapl-deploy.yml
@@ -29,7 +29,7 @@ jobs:
           TAG=$VERSION docker-compose --build-args release_target=release -f docker-compose.yml -f docker-compose.build.yml build
           docker system prune -f
 
-      - name: Deploy Grapl to AWS
+      - name: Upload Grapl artifacts to S3
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
