--- a/src/js/graphql_endpoint/package.json
+++ b/src/js/graphql_endpoint/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
+    "graphql-type-json": "^0.3.1",
     "grpc": "^1.24.2",
     "jsonwebtoken": "^8.5.1",
     "protobufjs": "^6.9.0"
