--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -259,6 +259,9 @@ services:
     environment:
       - IS_LOCAL=True
       - PORT=5000
+    links:
+      - grapl-engagement-graph-db:engagement_graph
+      - grapl-master-graph-db:master_graph
     ports:
       - 5000:5000
 
@@ -311,3 +314,84 @@ services:
       - amazonaws:127.0.0.1
     depends_on:
       - dynamodb
+
+
+
+  #
+  # Plugins
+  #
+
+  grapl-aws-guardduty-subgraph-generator:
+    image: grapl/grapl-aws-guardduty-subgraph-generator
+    tty: false
+    environment:
+      - BUCKET_PREFIX="local-grapl"
+      - "IS_LOCAL=True"
+      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/aws-guardduty-subgraph-generator-queue"
+    links:
+      - s3:minio
+      - sqs:sqs.us-east-1.amazonaws.com
+    extra_hosts:
+      - sqs:127.0.0.1
+      - amazonaws:127.0.0.1
+      - minio:127.0.0.1
+    depends_on:
+      - s3
+      - sqs
+      - grapl-aws-provision
+
+  grapl-aws-config-subgraph-generator:
+    image: grapl/grapl-aws-config-subgraph-generator
+    tty: false
+    environment:
+      - BUCKET_PREFIX="local-grapl"
+      - "IS_LOCAL=True"
+      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/aws-config-subgraph-generator-queue"
+    links:
+      - s3:minio
+      - sqs:sqs.us-east-1.amazonaws.com
+    extra_hosts:
+      - sqs:127.0.0.1
+      - amazonaws:127.0.0.1
+      - minio:127.0.0.1
+    depends_on:
+      - s3
+      - sqs
+      - grapl-aws-provision
+
+  grapl-aws-cloudtrail-subgraph-generator:
+    image: grapl/grapl-aws-cloudtrail-subgraph-generator
+    tty: false
+    environment:
+      - BUCKET_PREFIX="local-grapl"
+      - "IS_LOCAL=True"
+      - "QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/aws-cloudtrail-subgraph-generator-queue"
+    links:
+      - s3:minio
+      - sqs:sqs.us-east-1.amazonaws.com
+    extra_hosts:
+      - sqs:127.0.0.1
+      - amazonaws:127.0.0.1
+      - minio:127.0.0.1
+    depends_on:
+      - s3
+      - sqs
+      - grapl-aws-provision
+
+
+  grapl-aws-provision:
+    image: grapl/grapl-graph-provision:${TAG:-latest}
+    volumes:
+      - ../grapl-aws-plugins/local_plugin/local_provision.py:/var/run/target/local_provision.py
+    command: python /var/run/target/local_provision.py
+    tty: true
+    links:
+
+      - grapl-engagement-graph-db:engagement_graph
+      - grapl-master-graph-db:master_graph
+      - s3:minio
+      - sqs:sqs.us-east-1.amazonaws.com
+    extra_hosts:
+      - sqs:127.0.0.1
+      - amazonaws:127.0.0.1
+      - minio:127.0.0.1
