--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,16 +15,6 @@ services:
     logging:
       driver: none
 
-  grapl-engagement-graph-db:
-    tty: false
-    image: dgraph/standalone:v1.2.2
-    ports:
-      - "8001:8000"
-      - "8081:8080"
-      - "9081:9080"
-    logging:
-      driver: none
-
   sqs:
     image: localstack/localstack
     environment:
@@ -204,7 +194,6 @@ services:
     links:
       - s3:minio
       - sqs:sqs.us-east-1.amazonaws.com
-      - grapl-engagement-graph-db:engagement_graph
       - grapl-master-graph-db:master_graph
     extra_hosts:
       - sqs:127.0.0.1
@@ -221,7 +210,7 @@ services:
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     tty: true
     links:
-      - grapl-engagement-graph-db:engagement_graph
+      - grapl-master-graph-db:master_graph
 
   grapl-model-plugin-deployer:
     image: grapl/grapl-model-plugin-deployer:${TAG:-latest}
@@ -235,7 +224,6 @@ services:
     links:
       - s3:minio
       - sqs:sqs.us-east-1.amazonaws.com
-      - grapl-engagement-graph-db:engagement_graph
       - grapl-master-graph-db:master_graph
     extra_hosts:
       - sqs:127.0.0.1
@@ -256,7 +244,6 @@ services:
   grapl-notebook:
     image: grapl/grapl-notebook:${TAG:-latest}
     links:
-      - grapl-engagement-graph-db:engagement_graph
       - grapl-master-graph-db:master_graph
     ports:
       - 8888:8888
@@ -274,7 +261,6 @@ services:
       - ./etc/local_grapl/:/var/run/target/
     tty: true
     links:
-      - grapl-engagement-graph-db:engagement_graph
       - grapl-master-graph-db:master_graph
       - s3:minio
       - sqs:sqs.us-east-1.amazonaws.com
@@ -283,7 +269,6 @@ services:
       - amazonaws:127.0.0.1
       - minio:127.0.0.1
     depends_on:
-      - grapl-engagement-graph-db
       - grapl-master-graph-db
       - s3
       - sqs
