--- a/src/js/graphql_endpoint/Dockerfile
+++ b/src/js/graphql_endpoint/Dockerfile
@@ -13,7 +13,7 @@ COPY modules/* ./modules/
 COPY server.js .
 RUN zip --quiet -9r /lambda.zip .
 
-FROM scratch
+#FROM scratch
 
-COPY --from=0 /lambda.zip /
+#COPY --from=0 /lambda.zip /
 
