Update dockerfile for engagement-view

--- a/src/js/engagement_view/Dockerfile
+++ b/src/js/engagement_view/Dockerfile
@@ -1,2 +1,8 @@
-FROM syntaqx/serve
-COPY ./build/ /var/www
+FROM node:10 AS engagement-view-build
+COPY . .
+RUN yarn install
+RUN yarn build
+
+FROM syntaqx/serve AS grapl-engagement-view
+COPY --from=engagement-view-build ./build/ /var/www
+
