--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -45,4 +45,4 @@ jobs:
       - name: Check python formatting
         run: |
           source .venv/bin/activate
-          black --check --exclude '.*_pb2.py.*' src/python
+          black --check .
